7th chapter completed 6th commit

--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -40,7 +40,7 @@
 				{% endfor %}
 			</ul>
 			{% else %}
-			<strong>No pages currently in category.</strong>
+			<strong>There are no pages present.</strong>
 			{% endif %}
 
 		</div>
@@ -48,7 +48,8 @@
 
 
 		<div>
-			<a href="/rango/about/">About Rango</a><br />
+			<a href="/rango/about/">About</a><br />
+			<a href="/rango/add_category/">Add a New Category</a><br />
 			<img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" /> <!-- New line -->
 		</div>
 	</body>
